syntax = "proto3";

option go_package = "ipfs/node_proto";

package node_proto;
import "google/protobuf/empty.proto";

service NodeService {
  // Heartbeat with bootstrap nodes
  rpc Ping (PingRequest) returns (PingReply) {}
  // Notifies bootstrap node of new CID
  rpc Upload (UploadRequest) returns (google.protobuf.Empty) {} 
  // Sends a connect request to another node. Bootstrap node returns a list of CIDs, while
  // other nodes return an empty response.
  rpc Connect (ConnectRequest) returns (ConnectResponse) {}
}

message PingRequest {
  optional string address = 1;
}

message PingReply {
  optional string message = 1;
}

message UploadRequest {
  optional string cid = 1;
}

message ConnectRequest {
  optional string cid = 1;
}

message ConnectResponse {
  repeated string cid = 1;
}








